crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-view_union_all_join-multi_embeddings_megascience_vector_search_sql_projection.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, question, subject, trunc(_score, 3) as _score FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
[
  {
    "id": 189,
    "answer": "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]",
    "question": "Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\).",
    "subject": "math",
    "_score": 0.411
  },
  {
    "id": 212,
    "answer": "\\[\n(2y)^2 = (2 \\times 2)^2 = 4^2 = \\boxed{16}\n\\]",
    "question": "Evaluate the expression \\((2y)^2\\), where \\(y = 2\\).",
    "subject": "math",
    "_score": 0.38
  },
  {
    "id": 1277,
    "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "question": "Which base number, when raised to the fifth power, equals thirty-two?",
    "subject": "math",
    "_score": 0.375
  },
  {
    "id": 195,
    "answer": "\\[\n2x^2 = 2(-3)^2 = 2(9) = \\boxed{18}\n\\]",
    "question": "Evaluate the expression \\( 2x^2 \\), where \\( x = -3 \\).",
    "subject": "math",
    "_score": 0.348
  }
]
