crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-view_union_all_join-multi_embeddings_megascience_vector_search_sql_random.snap
---
source: crates/runtime/tests/search/mod.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "subject": "math"
  },
  {
    "subject": "math"
  },
  {
    "subject": "math"
  },
  {
    "subject": "math"
  }
]
